# waybar-rust-modules

./: Cargo.toml  README.md
