[package]
name = "waybar-rust-modules"
version = "0.1.0"
authors = ["Eduard Tolosa <edu4rdshl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "waybar_vpn"
src = "src/bin/waybar_vpn.rs"

[dependencies]
